--- a/windows/templates/windows-2008-serverstandard-amd64/vagrantfile-windows_2008.template
+++ b/windows/templates/windows-2008-serverstandard-amd64/vagrantfile-windows_2008.template
@@ -1,29 +1,37 @@
 # -*- mode: ruby -*-
 # vi: set ft=ruby :
 
+current_version = Gem::Version.new(Vagrant::VERSION)
+windows_version = Gem::Version.new("1.6.0")
+
 Vagrant.configure("2") do |config|
     config.vm.define "vagrant-windows-2008"
     config.vm.box = "windows_2008"
 
-    if !Vagrant.has_plugin?('vagrant-windows')
-      puts "vagrant-windows missing, please install the vagrant-windows plugin!"
-      puts "Run this command in your terminal:"
-      puts "vagrant plugin install vagrant-windows"
-      exit 1
+    if current_version < windows_version
+      if !Vagrant.has_plugin?('vagrant-windows')
+        puts "vagrant-windows missing, please install the vagrant-windows plugin!"
+        puts "Run this command in your terminal:"
+        puts "vagrant plugin install vagrant-windows"
+        exit 1
+      end
+
+      # You should be using the vagrant-windows Vagrant Plugin!
+      # Admin user name and password
+      config.winrm.username = "vagrant"
+      config.winrm.password = "vagrant"
+
+      config.vm.guest = :windows
+      config.windows.halt_timeout = 15
+
+      # Port forward WinRM and RDP
+      config.vm.network :forwarded_port, guest: 5985, host: 5985
+    else
+      config.vm.communicator = "winrm"
     end
 
-    # You should be using the vagrant-windows Vagrant Plugin!
-    # Admin user name and password
-    config.winrm.username = "vagrant"
-    config.winrm.password = "vagrant"
-  
-    config.vm.guest = :windows  
-    config.windows.halt_timeout = 15
-
-    # Port forward WinRM and RDP
     config.vm.network :forwarded_port, guest: 3389, host: 3389
-    config.vm.network :forwarded_port, guest: 5985, host: 5985
-  
+    
     config.vm.provider :virtualbox do |v, override|
         #v.gui = true
         v.customize ["modifyvm", :id, "--memory", 2048]
