--- a/windows/templates/windows-7-professional-amd64/vagrantfile-windows_7.template
+++ b/windows/templates/windows-7-professional-amd64/vagrantfile-windows_7.template
@@ -22,11 +22,16 @@ Vagrant.configure("2") do |config|
     config.windows.set_work_network = true
 
     # Port forward WinRM and RDP
-    config.vm.network :forwarded_port, guest: 3389, host: 3389
-    config.vm.network :forwarded_port, guest: 5985, host: 5985
+    #config.vm.network :forwarded_port, guest: 3389, host: 3389
+    #config.vm.network :forwarded_port, guest: 5985, host: 5985
+
+
+    config.vm.communicator = "winrm"
+
 
     config.vm.provider :virtualbox do |v, override|
         #v.gui = true
+        v.gui = true
         v.customize ["modifyvm", :id, "--memory", 2048]
         v.customize ["modifyvm", :id, "--cpus", 2]
     end
